cleans neural network

--- a/Cervan_Renz_MirandaSousa_19-660-018 copy.Rmd
+++ b/Cervan_Renz_MirandaSousa_19-660-018 copy.Rmd
@@ -6,7 +6,7 @@ output: "html_document"
 ---
   
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = FALSE)
+knitr::opts_chunk$set(echo = FALSE, warning=FALSE, message=FALSE, cache=TRUE)
 ```
 
 
@@ -824,9 +824,7 @@ ggplot(dat_amount_claims, aes(x = fitted_zip, y = AMOUNT_CLAIMS)) +
 A neural network model is fitted to predict the premium amount based on the characteristics of the insured vehicles and the driver. The model is trained using the cleaned and transformed data, and the results are analyzed to evaluate the model's performance.
 
 
-```{r neuralnetworkv2, cache=TRUE, message=FALSE}
-str(clean_dat_motor)
-
+```{r neuralnetworkv2, results='hide'}
 # Data Preparation: Split the data into training and testing sets
 set.seed(123)
 train_index <- sample(seq_len(nrow(clean_dat_motor)), 0.8 * nrow(clean_dat_motor))
@@ -854,9 +852,7 @@ if (file.exists(model_path)) {
 } else {
   # Fit the neural network model using nnet
   nn_model <- nnet(
-    PREMIUM_log ~ SEX + INSR_TYPE + USAGE + TYPE_VEHICLE + MAKE +
-      AGE_VEHICLE + SEATS_NUM + CCM_TON_log + INSURED_VALUE_log +
-      AMOUNT_CLAIMS_PAID,
+    PREMIUM_log ~ .,
     data = train_data,
     size = 5,           # Number of neurons in the hidden layer
     linout = TRUE,      # Linear output for regression tasks
@@ -873,7 +869,6 @@ nn_model
 
 # visualize the neural network model
 plotnet(nn_model, alpha = 0.5, margin = 0.1, cex = 0.8)
-
 # Predict on the test data
 test_data$predicted_premium_log <- predict(nn_model, test_data)
 
@@ -881,19 +876,6 @@ test_data$predicted_premium_log <- predict(nn_model, test_data)
 test_data$predicted_premium <- exp(test_data$predicted_premium_log)
 test_data$PREMIUM <- exp(test_data$PREMIUM_log)
 
-#Visualize Predicted vs. Actual Premium (log-transformed)
-library(ggplot2)
-ggplot(test_data, aes(x = PREMIUM_log, y = predicted_premium_log)) +
-  geom_point(color = "darkblue") +
-  geom_abline(intercept = 0, slope = 1, color = "red", linetype = "dashed") +
-  labs(x = "Actual Premium (log-transformed)",
-       y = "Predicted Premium (log-transformed)",
-       title = "Predicted vs. Actual Premium") +
-  theme(plot.title = element_text(hjust = 0.5),
-        axis.title.x = element_text(face = "bold", colour = "blue", size = 12),
-        axis.title.y = element_text(face = "bold", colour = "blue", size = 12))
-# add legend
-scale_color_manual(values = c("Actual" = "darkblue", "Predicted" = "red"))
 
 # Visualize Predicted vs. Actual Premium (Original Scale)
 ggplot(test_data, aes(x = PREMIUM, y = predicted_premium)) +
@@ -905,47 +887,44 @@ ggplot(test_data, aes(x = PREMIUM, y = predicted_premium)) +
   theme(plot.title = element_text(hjust = 0.5),
         axis.title.x = element_text(face = "bold", colour = "blue", size = 12),
         axis.title.y = element_text(face = "bold", colour = "blue", size = 12))
-# add legend
-scale_color_manual(values = c("Actual" = "darkblue", "Predicted" = "red"))
-
 
 # Save the neural network model as an RDS file
 model_path <- "nn_model.rds"
 if (!file.exists(model_path)) {
   saveRDS(nn_model, model_path)
-  cat("Neural network model saved as", model_path, "\n")
 } else {
-  cat("Neural network model already exists as", model_path, "\n")
 }
 
 # Evaluate the model
 mse <- mean((test_data$PREMIUM_log - test_data$predicted_premium_log)^2)
-cat("Mean Squared Error (MSE):", mse, "\n")
 
 # accuracy metrics
 r_squared <- 1 - mse / var(test_data$PREMIUM_log)
-cat("R-squared:", r_squared, "\n")
 
 rmse <- sqrt(mse)
-cat("Root Mean Squared Error (RMSE):", rmse, "\n")
 
 mae <- mean(abs(test_data$PREMIUM_log - test_data$predicted_premium_log))
-cat("Mean Absolute Error (MAE):", mae, "\n")
 
 mape <- mean(abs(test_data$PREMIUM_log - test_data$predicted_premium_log) / test_data$PREMIUM_log) * 100
-cat("Mean Absolute Percentage Error (MAPE):", mape, "%\n")
 
+# make a table of the results
+results <- data.frame(Model = "Neural Network",
+                      MSE = mse,
+                      R_squared = r_squared,
+                      RMSE = rmse,
+                      MAE = mae,
+                      MAPE = mape)
+
+#results
 ```
 
 The neural network model was trained to predict the log-transformed premium amount based on the characteristics of the insured vehicles. The model was fitted using the nnet package, with the training data split into 80% training and 20% testing sets. The neural network model was trained with a hidden layer size of 5 neurons, linear output for regression tasks, and a maximum of 100 iterations for training. 
 
 The plots of predicted vs. actual premium amounts show that the neural network model generally performs well in predicting the premium amounts. The points are clustered around the diagonal line, indicating a good alignment between the actual and predicted values. The model captures the general trend of the premiums, with some deviations for higher premium values. The model's performance can be further evaluated by considering additional metrics such as the R-squared value, RMSE, MAE, and MAPE, which provide insights into the model's accuracy and predictive power.
 
-The evaluation of the neural network model revealed a Mean Squared Error (MSE) of 0.23, indicating the average squared difference between the actual and predicted log-transformed premium amounts. The R-squared value of 0.75 suggests that the model can explain approximately 75.10% of the variance in the log-transformed premiums, indicating a good fit to the data. The Root Mean Squared Error (RMSE) of 0.48 represents the square root of the MSE, providing a measure of the model's prediction accuracy. The Mean Absolute Error (MAE) of 0.30 indicates the average absolute difference between the actual and predicted log-transformed premiums. The Mean Absolute Percentage Error (MAPE) of 3.48% represents the average percentage difference between the actual and predicted premiums, providing a measure of the model's relative accuracy.
+Nevertheless, we cannot be sure that those values for the model above are truly correct or it was luck that the model performs well at a first instance. To solve this question, the NN will be run again using **k-fold Cross Validation** with hyperparameter tuning. This approach will help ensure that the model's performance is robust and not due to overfitting or random chance. The k-fold Cross Validation will produce a more reliable estimate of the model's performance by splitting the data into k = 10 subsets, training the model on k-1 subsets, and validating it on the remaining subset. This process is repeated k times, and the results are averaged to provide a comprehensive evaluation of the model.
 
-Overall, the neural network model demonstrates good performance in predicting the premium amounts based on the characteristics of the insured vehicles. The model captures the underlying patterns in the data and provides accurate predictions of the premium amounts. The evaluation metrics indicate that the model has a high level of accuracy and predictive power, which could make it a valuable tool for premium prediction in the insurance industry.
-
-```{r nnetworkv4}
+```{r nnetworkv4, results='hide'}
 # Repeat neural network with caret and cross validation
 # Load necessary libraries
 library(caret)
@@ -961,14 +940,11 @@ tune_grid <- expand.grid(size = c(3, 5, 7), decay = c(0, 0.1, 0.01))
 model_path_cv <- "nn_model_cv.rds"
 if (file.exists(model_path_cv)) {
   nn_model_cv <- readRDS(model_path_cv)
-  cat("Neural network model with cross-validation loaded from", model_path_cv, "\n")
 } else {
   # Train the neural network model using caret with cross-validation
   set.seed(123)
   nn_model_cv <- train(
-    PREMIUM_log ~ SEX + INSR_TYPE + USAGE + TYPE_VEHICLE + MAKE +
-      AGE_VEHICLE + SEATS_NUM + CCM_TON_log + INSURED_VALUE_log +
-      AMOUNT_CLAIMS_PAID,
+    PREMIUM_log ~ .,
     data = train_data,
     method = "nnet",
     trControl = train_control,
@@ -977,15 +953,13 @@ if (file.exists(model_path_cv)) {
     trace = FALSE,
     maxit = 100
   )
-  
+
   # Save the neural network model with cross-validation as an RDS file
   saveRDS(nn_model_cv, model_path_cv)
   cat("Neural network model with cross-validation saved as", model_path_cv, "\n")
 }
 
-# Print the best model and its parameters
-print(nn_model_cv)
-print(nn_model_cv$bestTune)
+nn_model_cv
 
 # Predict on the test data using the best model
 test_data$predicted_premium_log_cv <- predict(nn_model_cv, test_data)
@@ -995,19 +969,24 @@ test_data$predicted_premium_cv <- exp(test_data$predicted_premium_log_cv)
 
 # Evaluate the model
 mse_cv <- mean((test_data$PREMIUM_log - test_data$predicted_premium_log_cv)^2)
-cat("Mean Squared Error (MSE) with CV:", mse_cv, "\n")
 
 r_squared_cv <- 1 - mse_cv / var(test_data$PREMIUM_log)
-cat("R-squared with CV:", r_squared_cv, "\n")
 
 rmse_cv <- sqrt(mse_cv)
-cat("Root Mean Squared Error (RMSE) with CV:", rmse_cv, "\n")
 
 mae_cv <- mean(abs(test_data$PREMIUM_log - test_data$predicted_premium_log_cv))
-cat("Mean Absolute Error (MAE) with CV:", mae_cv, "\n")
 
 mape_cv <- mean(abs(test_data$PREMIUM_log - test_data$predicted_premium_log_cv) / test_data$PREMIUM_log) * 100
-cat("Mean Absolute Percentage Error (MAPE) with CV:", mape_cv, "%\n")
+
+# print evaluations of the model as a table
+results_cv <- data.frame(Model = "Neural Network Cross Validation",
+                         MSE = mse_cv,
+                         R_squared = r_squared_cv,
+                         RMSE = rmse_cv,
+                         MAE = mae_cv,
+                         MAPE = mape_cv)
+
+#results_cv
 
 # Visualize Predicted vs. Actual Premium (Original Scale) with CV
 ggplot(test_data, aes(x = PREMIUM, y = predicted_premium_cv)) +
@@ -1019,6 +998,17 @@ ggplot(test_data, aes(x = PREMIUM, y = predicted_premium_cv)) +
   theme(plot.title = element_text(hjust = 0.5),
         axis.title.x = element_text(face = "bold", colour = "blue", size = 12),
         axis.title.y = element_text(face = "bold", colour = "blue", size = 12))
-
-
 ```
+
+## Results
+
+| Model                          | Mean Squared Error (MSE) | R-squared | Root Mean Squared Error (RMSE) | Mean Absolute Error (MAE) | Mean Absolute Percentage Error (MAPE) |
+|---------|:------:|:-----:|:----:|:------:|:----:|
+| Neural Network                 | 0.2345529                | 0.7510002 | 0.4843067                     | 0.3009332                 | 3.488952 %                            |
+| Neural Network Cross Validation| 0.2343864                | 0.751177  | 0.4841347                     | 0.2981682                 | 3.462526 %                            |
+
+The results from both the neural network and the neural network with cross-validation are very similar, with only minor differences in the evaluation metrics. This consistency suggests that the model is robust and performs well regardless of the validation method used. The cross-validation approach confirms the reliability of the neural network model, indicating that it is not overfitting and generalizes well to unseen data.
+
+The evaluation of the neural network model revealed a Mean Squared Error (MSE) of 0.23, indicating the average squared difference between the actual and predicted log-transformed premium amounts. The R-squared value of 0.75 suggests that the model can explain approximately 75.10% of the variance in the log-transformed premiums, indicating a good fit to the data. The Root Mean Squared Error (RMSE) of 0.48 represents the square root of the MSE, providing a measure of the model's prediction accuracy. The Mean Absolute Error (MAE) of 0.30 indicates the average absolute difference between the actual and predicted log-transformed premiums. The Mean Absolute Percentage Error (MAPE) of 3.46% represents the average percentage difference between the actual and predicted premiums, providing a measure of the model's relative accuracy.
+
+Overall, the neural network model demonstrates good performance in predicting the premium amounts based on the characteristics of the insured vehicles and drivers. The model captures the underlying patterns in the data and provides accurate predictions of the premium amounts. The evaluation metrics indicate that the model has a high level of accuracy and predictive power, which could make it a valuable tool for premium prediction in the insurance industry.
